--- a/index.html
+++ b/index.html
@@ -209,6 +209,9 @@ padding: 30px;
       gap: 20px;
       position: relative;
       margin-top: 30px;
+      
+      grid-template-columns: 1fr,1fr, 1fr;
+      grid-template-rows: 1fr,1fr,1fr;
     }
     .menu-me{
       background-color: #fff;
@@ -294,8 +297,7 @@ padding: 30px;
      
       }
       .fa-bars{
-       margin-left: 700px;
-      }
+       margin-left:;}
       nav ul{
         background-color: aqua;
         position: fixed;
@@ -340,6 +342,8 @@ padding: 30px;
       flex-direction: column;
     }
     .menu{
+      grid-template-columns: 1fr,1fr, 1fr;
+      grid-template-rows: 1fr,1fr,1fr;
       flex-direction: column;
       padding: 20px;
     }   .menu-me img{
