--- a/index.html
+++ b/index.html
@@ -297,7 +297,9 @@ padding: 30px;
      
       }
       .fa-bars{
-       margin-left:;}
+         position: absolute;
+       top: 0;
+       right: -70%;}
       nav ul{
         background-color: aqua;
         position: fixed;
